Add Header and Nav

--- a/index.html
+++ b/index.html
@@ -13,12 +13,47 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive pirate website - Bedimcode</title>
+      <title>Pirate website</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
+         <nav class="nav container">
+            <a href="#" class="nav__logo">
+               <i class="ri-anchor-fill"></i>
+               <span>PISHIP</span>
+            </a>
 
+            <div class="nav__menu" id="nav-menu">
+               <ul class="nav__list">
+                  <li>
+                     <a href="#" class="nav__link">HOME</a>
+                  </li>
+                  
+                  <li>
+                     <a href="#" class="nav__link">EXPLORE</a>
+                  </li>
+                  <li>
+                     <a href="#" class="nav__link">CARIBBEAN</a>
+                  </li>
+                  <li>
+                     <a href="#" class="nav__link"> CONTACT</a>
+                  </li>
+
+               </ul>
+
+               <!-- Close Button  -->
+                <div class="nav__close" id="nav-close">
+                  <i class="ri-close-large-line"></i>
+ 
+                </div>
+            </div>
+
+            <!-- Toggle Button  -->
+             <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-menu-line"></i>
+             </div>
+         </nav>
       </header>
 
       <!--==================== MAIN ====================-->
@@ -30,6 +65,7 @@
       </main>
       
       <!--=============== MAIN JS ===============-->
-      <script src="assets/js/main.js"></script>
+      <script src="./assets/js/main.js"></script>
    </body>
+
 </html>
