--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Pirate website</title>
+      <title>Sail Motion</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -65,12 +65,12 @@
                <img src="assets/img/cloud.svg" alt="image-cloud" class="home__cloud-2">
             
                <div class="home__data">
-                  <h3 class="home__subtitle">NEW PIRATE</h3>
-                  <h1 class="home__title"><span>LEGEND OF</span> <br>
-                     THE SEAS</h1>
+                  <h3 class="home__subtitle">Embark on an Epic Journey</h3>
+                  <h1 class="home__title"><span>Conquer the</span> <br>
+            Seven Seas</h1>
 
 
-                  <a href="#" class="home__button">EXPLORE NOW</a>
+                  <a href="#" class="home__button">Set Sail Now</a>
 
                </div>
 
