--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <nav class="nav container">
             <a href="#" class="nav__logo">
                <i class="ri-anchor-fill"></i>
-               <span>PISHIP</span>
+               <span>BlackSail</span>
             </a>
 
             <div class="nav__menu" id="nav-menu">
