--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
          <!--==================== HOME ====================-->
          <section class="home">
             <div class="home__container container">
-               <img src="assets/img/cloud.svg" alt="image-cloud" class="home__cloud-1">
-               <img src="assets/img/cloud.svg" alt="image-cloud" class="home__cloud-2">
+               <img src="./assets/img/cloud.svg" alt="image-cloud" class="home__cloud-1">
+               <img src="./assets/img/cloud.svg" alt="image-cloud" class="home__cloud-2">
             
                <div class="home__data">
                   <h3 class="home__subtitle">Embark on an Epic Journey</h3>
@@ -75,10 +75,10 @@
                </div>
 
                <div class="home__images">
-                  <div class="home__waves-3" style="background-image: url(assets/img/waves-3.png);"></div>
-                  <div class="home__waves-2" style="background-image: url(assets/img/waves-2.png);"></div>
-                  <img src="assets/img/pirate-ship.svg" alt="Ship image" class="home__ship">
-                  <div class="home__waves-1" style="background-image: url(assets/img/waves-1.png);"></div>
+                  <div class="home__waves-3" style="background-image: url(./assets/img/waves-3.png);"></div>
+                  <div class="home__waves-2" style="background-image: url(./assets/img/waves-2.png);"></div>
+                  <img src="./assets/img/pirate-ship.svg" alt="Ship image" class="home__ship">
+                  <div class="home__waves-1" style="background-image: url(./assets/img/waves-1.png);"></div>
                </div>
 
             </div>
