--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                <img src="./assets/img/cloud.svg" alt="image-cloud" class="home__cloud-2">
             
                <div class="home__data">
-                  <h3 class="home__subtitle">Embark on an Epic Journey</h3>
+                  <h3 class="home__subtitle">NEW PIRATE</h3>
                   <h1 class="home__title"><span>Conquer the</span> <br>
             Seven Seas</h1>
 
