--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Seven Seas</h1>
 
 
-                  <a href="#" class="home__button">Set Sail Now</a>
+                  <a href="#" class="home__button">SET SAIL NOW</a>
 
                </div>
 
