--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             
                <div class="home__data">
                   <h3 class="home__subtitle">NEW PIRATE</h3>
-                  <h1 class="home__title"><span>Conquer the</span> <br>
-            Seven Seas</h1>
+                  <h1 class="home__title"><span>CONQUER THE</span><br>THE SEAS</h1>
 
 
                   <a href="#" class="home__button">SET SAIL NOW</a>
